[package]
name = "tonnelle-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.9.0"
futures-io = "0.3.31"
futures-util = { version = "0.3.31", features = ["io"] }
http = "1.2.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.25"
once_cell = "1.20.2"
parking_lot = "0.12.3"
pretty_env_logger = "0.5.0"
rustls-pki-types = "1.10.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tonnelle-core = { version = "0.1.0", path = "../tonnelle-core" }
webpki-roots = "1.0.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }
reqwest = { version = "0.13.0", features = ["blocking"] }

[lib]
name = "tonnelle_proxy"

[[bench]]
name = "tonnelle"
harness = false
